paper/presentation/custom.css
.flex-container {
    display:flex;
    flex-wrap:nowrap;
    align-items:center;
    justify-content:center;
    /* align-content:space-around; */
}

li {
    text-align:justify;
}

code {
    border-radius: 3px;
    background-color: #e8e8e8;
}

td > p {
    margin: 0 !important;
}

